--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <!-- NAVIGATION -->
 <nav>
   <a href="index.html">Accueil</a>
-  <a href="page1.html">Page 1</a>
+  <a href="page1.html">Calorie Calculator</a>
   <a href="page2.html">Page 2</a>
   <a href="page3.html">Page 3</a>
   <a href="page4.html">Page 4</a>
@@ -249,3 +249,4 @@
 
 </body>
 </html>
+
