--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
   <h3>Select a tool:</h3>
 
-  <a class="page-link" href="page1.html">Page 1 – Tool</a>
+  <a class="page-link" href="page1.html">Calorie Calculator - TDEE </a>
   <a class="page-link" href="page2.html">Page 2 – Tool</a>
   <a class="page-link" href="page3.html">Page 3 – Tool</a>
   <a class="page-link" href="page4.html">Page 4 – Tool</a>
@@ -249,4 +249,5 @@
 
 </body>
 </html>
+
 
